# bio-showcase

./: .env  .firebaserc  .gitignore  IMPL_PLAN.md  LEARNING_PLAN.md  Makefile  README.md  career_opportunities.md  check_styles.py  client_test.ipynb  console.ipynb  daxing_med_park_research.md  denofresh_tailwind_upgrade_guide.md  firebase.json  frontend_debug_guide.md  icon.kra  icons.toml  main.py  manage.py  nginx_config.py  pyproject.toml  update_version.py
.github/workflows/: deploy-frontend.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  release-and-deploy.yml
bio_polls/: admin.py  api_urls.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
bio_polls/fixtures/: demo_data.json
bio_polls/migrations/: 0001_initial.py
bio_polls/static/polls/: style.css
bio_polls/templates/polls/: detail.html  header.html  index.html  results.html
bio_primer/: alignment.py  apps.py  models.py  primer.py  sandbox.py  tests.py  tutorial_loader.py  urls.py  views.py
bio_primer/migrations/: 0001_initial.py
bio_primer/static/primer/: index.js  style.css
bio_primer/templates/primer/: header.html  index.html
bio_showcase/: __main__.py  main.py  nginx.conf  pm.py  settings.py  urls.py
bio_showcase/bio_showcase/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: counter_test.tsx  deno.json  dev.ts  main.ts
frontend/components/: Card.tsx  Header.tsx
frontend/islands/: PrimerDesign.tsx  SequenceAlignment.tsx  TutorialPlayground.tsx
frontend/routes/: about.tsx  alignment.tsx  index.tsx  tutorial.tsx
frontend/static/: styles.css
tutorials/01_reverse_complement/: concept.md  solution.py  test_solution.py
tutorials/02_sliding_window_gc/: concept.md  solution.py  test_solution.py
tutorials/03_sequence_alignment/: concept.md  solution.py  test_solution.py
tutorials/04_local_alignment/: concept.md  solution.py  test_solution.py
tutorials/05_dna_translation/: concept.md  solution.py  test_solution.py
tutorials/06_kmer_frequency/: concept.md  solution.py  test_solution.py
tutorials/07_fastq_quality/: concept.md  solution.py  test_solution.py
