[project]
name = "bio-showcase"
version = "2025.5.12.0"
description = "Soda's Bioinformatics showcase"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["django>=5.2", "sodatools>=2025.2.16.0", "uvicorn>=0.34.1"]


[project.urls]
Repository = "https://github.com/soda92/bio-showcase"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
ignore-vcs = true
packages = ["bio_showcase", "bio_polls"]
include = ["*.sqlite3"]
exclude = [
    "__pycache__",
    "*.pyc",
    "compile*.json",
    ".cache",
    "build",
    "*.syso",
    "*.exe~",
    "*.ico~",
    "*.pdb",
]

[tool.hatch.build.targets.wheel]
ignore-vcs = true
packages = ["bio_showcase", "bio_polls"]
# exclude is not needed because wheel is build from sdist in uv

# [tool.hatch.build.hooks.custom]

[project.scripts]
bio_run = "bio_showcase.main:main"
bio_pm = "bio_showcase.pm:run"
bio_dev = "bio_showcase.pm:runserver"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true
