[project]
name = "bio-showcase"
version = "2025.5.14.2"
description = "Soda's Bioinformatics showcase"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2",
    "django-debug-toolbar>=5.2.0",
    "soda-nginx>=2025.5.13.5 ; sys_platform == 'win32'",
    "sodatools>=2025.2.16.0",
    "uvicorn>=0.34.1",
]


[project.urls]
Repository = "https://github.com/soda92/bio-showcase"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
ignore-vcs = true
packages = ["bio_showcase", "bio_polls", "bio_static", "bio_media"]
include = ["*.sqlite3"]
exclude = [
    "__pycache__",
    "*.pyc",
    "compile*.json",
    ".cache",
    "build",
    "*.syso",
    "*.exe~",
    "*.ico~",
    "*.pdb",
]

[tool.hatch.build.targets.wheel]
ignore-vcs = true
packages = ["bio_showcase", "bio_polls", "bio_static", "bio_media"]
# exclude is not needed because wheel is build from sdist in uv

# [tool.hatch.build.hooks.custom]

[project.scripts]
bio_run = "bio_showcase.main:main"
bio_pm = "bio_showcase.pm:run"
pm = "bio_showcase.pm:run"
bio_dev = "bio_showcase.pm:runserver"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[dependency-groups]
dev = ["jupyter>=1.1.1", "trayicons>=2025.5.12.1"]
